# undegen

./: .mise.toml  Anchor.toml  Cargo.toml  README.md  build_output.txt  mise.toml
app/: docker-compose.yml  dump.rdb  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
app-designer/: README.md  next.config.ts  package.json  pnpm-lock.yaml
app-designer/app/: globals.css  page.tsx
app-designer/app/components/: ConnectWalletModal.tsx  Footer.tsx  Navbar.tsx  PixelBlast.tsx  PixelBlastWrapper.tsx  PixelTransition.tsx  Timeline.tsx  providers.tsx
app-designer/app/context/: UndegenProgramContext.tsx
app-designer/app/cookies/: page.tsx
app-designer/app/history/: page.tsx
app-designer/app/lib/: dummyData.ts  solanaConfig.ts
app-designer/app/lobby/: page.tsx
app-designer/app/news/: page.tsx
app-designer/app/services/: undegenProgram.ts
app-designer/app/types/: undegen.ts
app-designer/app/upcoming/: page.tsx
app/app/: layout.tsx  page.tsx
app/app/components/: BottomNavbar.tsx  ConsensusVoting.tsx  DashboardMetrics.tsx  FAQ.tsx  Footer.tsx  Header.tsx  HowItWorks.tsx  LobbyPhase.tsx  MiniCalendar.tsx  Navbar.tsx  PixelBlast.tsx  PixelTransition.tsx  SliderBanner.tsx  StickyChat.tsx  SyndicateSidebar.tsx  Timeline.tsx  WithdrawSection.tsx
app/app/context/: UndegenProgramContext.tsx
app/app/cookies/: page.tsx
app/app/history/: page.tsx
docs/: app_architecture.md  app_getting_started.md  architecture.md  getting_started.md  operator_architecture.md  operator_getting_started.md  programs_architecture.md  programs_getting_started.md
operator/: .env.example  .gitignore  Cargo.toml  config.yml
operator/src/: api.rs  config.rs  main.rs  processor.rs  solana.rs  state.rs
programs/lottery/: Cargo.toml
programs/lottery/src/: constants.rs  error.rs  instructions.rs  lib.rs  state.rs  switchboard.rs
programs/lottery/src/instructions/: buy_ticket.rs  claim_prize.rs  draw_winner.rs  initialize_lottery.rs  request_randomness.rs  reveal_winner.rs  start_round.rs
programs/lottery/tests/: test_lottery_flow.rs
programs/undegen_core/: Cargo.toml
programs/undegen_core/src/: constants.rs  error.rs  instructions.rs  lib.rs  state.rs  txodds_types.rs
programs/undegen_core/src/instructions/: cast_vote.rs  claim.rs  claim_and_join_lottery.rs  claim_operator_yield.rs  deposit_collateral.rs  finalize_consensus.rs  initialize_batch.rs  initialize_protocol.rs  join_batch.rs  leave_batch.rs  penalize_missed_collateral.rs  propose_match.rs  settle_default.rs  settle_with_proof.rs  start_batch.rs
programs/undegen_core/tests/: phase1_test.rs  phase2_test.rs  phase3_test.rs  phase4_test.rs
programs/yield_vault/: Cargo.toml
(+84 files in other folders)
